# htsgetr

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: GETTING_STARTED.md  roadmap.md
python/htsgetr/: __init__.py
scripts/: generate-test-data.sh
src/: config.rs  error.rs  lib.rs  main.rs  python.rs  types.rs
src/auth/: extractor.rs  jwks.rs  jwt.rs  middleware.rs  mod.rs  url_signing.rs
src/formats/: bam.rs  bcf.rs  cram.rs  fasta.rs  fastq.rs  mod.rs  vcf.rs
src/handlers/: data.rs  mod.rs  reads.rs  sequences.rs  service_info.rs  variants.rs
src/storage/: http.rs  local.rs  mod.rs  s3.rs
tests/: integration_tests.rs
tests/data/: sample.bam  sample.bam.bai  sample.cram  sample.cram.crai  sample.vcf.gz.tbi
tests/integration/: tui.py
