[package]
name = "htsgetr"
version = "0.1.6"
edition = "2024"
description = "htsget protocol server implementation in Rust"
license = "MIT"
repository = "https://github.com/bolu-atx/htsgetr"

[lib]
name = "htsgetr"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "htsgetr"
path = "src/main.rs"

[features]
default = ["s3", "http"]
python = ["pyo3", "ureq"]
s3 = ["aws-sdk-s3", "aws-config"]
http = ["reqwest"]
auth = ["jsonwebtoken", "hmac", "sha2", "moka", "reqwest"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bioinformatics - noodles
noodles = { version = "0.84", features = [
    "bam",
    "bcf",
    "bgzf",
    "core",
    "cram",
    "csi",
    "fasta",
    "fastq",
    "sam",
    "tabix",
    "vcf",
    "async",
] }

# Indexing and byte ranges
bytes = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
clap = { version = "4", features = ["derive", "env"] }

# URL handling
url = "2"

# Base64 for data URIs
base64 = "0.22"

# Async trait for storage abstraction
async-trait = "0.1"

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# HTTP client for Python bindings (optional) - v3 uses rustls by default, avoids OpenSSL cross-compile issues
ureq = { version = "3", optional = true }

# S3 storage (optional, default on)
aws-sdk-s3 = { version = "1.65", optional = true }
aws-config = { version = "1.5", features = ["behavior-version-latest"], optional = true }

# HTTP storage (optional, default on) - auth feature needs json for JWKS
# Use rustls-tls to avoid OpenSSL cross-compile issues in maturin builds
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"], optional = true }

# Authentication (optional)
jsonwebtoken = { version = "9", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
moka = { version = "0.12", features = ["future"], optional = true }

[dev-dependencies]
tempfile = "3"
axum-test = "16"
serde_json = "1"
