[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "htsgetr"
dynamic = ["version"]
description = "htsget protocol server implementation in Rust with Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["htsget", "bioinformatics", "bam", "vcf", "genomics"]

[project.urls]
Homepage = "https://github.com/bolu-atx/htsgetr"
Repository = "https://github.com/bolu-atx/htsgetr"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "htsgetr._htsgetr"
version-source = "cargo"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0",
]
